# Graphite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deploy.py  graphite.desktop
.github/workflows/: build.yml
3rd/: CMakeLists.txt
3rd/nestopia/: CMakeLists.txt  _readme.txt
3rd/nestopia/core/: NstPpu.hpp
3rd/nestopia/core/board/: NstBoard.cpp  NstBoardUnl158b.cpp  NstBoardUnl158b.hpp  NstBoardUnlMmc3BigPrgRom.cpp  NstBoardUnlMmc3BigPrgRom.hpp  NstBoardUnlRetX7Gbl.cpp  NstBoardUnlRetX7Gbl.hpp  NstBoardWaixing.hpp  NstBoardWaixingFs304.cpp  NstBoardWaixingFs304.hpp
carbon/: CMakeLists.txt  carbon.cpp  carbon.h  main.cpp
graphite/: CMakeLists.txt  graphite.cpp  graphite.h  libavimpl.cpp  libavimpl.h  main.cpp  nes.cpp  nes.h  nestopiaimpl.cpp  nestopiaimpl.h  rgmui.cpp  rgmui.h  util.cpp  util.h  v4l2impl.cpp  v4l2impl.h  version.h  video.cpp  video.h
rgmnes/: CMakeLists.txt  nes.cpp  nes.h  nestopiaimpl.cpp  nestopiaimpl.h
rgmui/: CMakeLists.txt  rgmui.cpp  rgmui.h  rgmuimain.cpp  rgmuimain.h
rgmutil/: CMakeLists.txt  util.cpp  util.h
rgmvideo/: CMakeLists.txt  libavimpl.cpp  libavimpl.h  uncrt.cpp  uncrt.h  uncrt_main.cpp  v4l2impl.cpp  v4l2impl.h  video.cpp  video.h
