cmake_minimum_required(VERSION 2.6)
project(nestopia)

add_library(3rdnestopia STATIC
    "core/NstVideoFilterNone"
    "core/vssystem/NstVsSuperXevious"
    "core/vssystem/NstVsSystem"
    "core/vssystem/NstVsRbiBaseball"
    "core/vssystem/NstVsTkoBoxing"
    "core/NstImage"
    "core/NstVideoFilterNtsc"
    "core/NstMemory"
    "core/NstStream"
    "core/NstVideoFilterScaleX"
    "core/NstVideoFilterNtscCfg"
    "core/NstSoundRenderer"
    "core/NstPpu"
    "core/NstCrc32"
    "core/NstVector"
    "core/NstCartridge"
    "core/NstSoundPlayer"
    "core/NstTrackerMovie"
    "core/NstCartridgeUnif"
    "core/NstCartridgeInes"
    "core/NstImageDatabase"
    "core/NstVideoScreen"
    "core/NstPins"
    "core/NstPatcherUps"
    "core/NstChips"
    "core/NstCartridgeRomset"
    "core/board/NstBoardBmcMarioParty7in1"
    "core/board/NstBoardKayH2288"
    "core/board/NstBoardUnlTf1201"
    "core/board/NstBoardKonamiVrc2"
    "core/board/NstBoardNamcot163"
    "core/board/NstBoardIremH3001"
    "core/board/NstBoardSunsoft5b"
    "core/board/NstBoardJyCompany"
    "core/board/NstBoardBmcSuperVision16in1"
    "core/board/NstBoardBmcSuperGun20in1"
    "core/board/NstBoardTxcTw"
    "core/board/NstBoardAcclaimMcAcc"
    "core/board/NstBoardBmcSuperBig7in1"
    "core/board/NstBoardJalecoJf19"
    "core/board/NstBoardSuperGamePocahontas2"
    "core/board/NstBoardBmcSuperHiK300in1"
    "core/board/NstBoardBmcVt5201"
    "core/board/NstBoardHes"
    "core/board/NstBoardWaixingZs"
    "core/board/NstBoardIremLrog017"
    "core/board/NstBoardTengenRambo1"
    "core/board/NstBoardBtlT230"
    "core/board/NstBoardDiscrete"
    "core/board/NstBoardBenshengBs5"
    "core/board/NstBoardSachenTca01"
    "core/board/NstBoardBmcGamestarA"
    "core/board/NstBoardWaixingSgzlz"
    "core/board/NstBoardSunsoftDcs"
    "core/board/NstBoardBmcResetBased4in1"
    "core/board/NstBoardBtlSmb2c"
    "core/board/NstBoardKonamiVrc3"
    "core/board/NstBoardSubor"
    "core/board/NstBoardBmcSuper24in1"
    "core/board/NstBoardBandaiOekaKids"
    "core/board/NstBoardUnlEdu2000"
    "core/board/NstBoardBmcSuper22Games"
    "core/board/NstBoardNanjing"
    "core/board/NstBoardKayPandaPrince"
    "core/board/NstBoardBmcBallgames11in1"
    "core/board/NstBoardCxRom"
    "core/board/NstBoardKonamiVrc6"
    "core/board/NstBoardBmc15in1"
    "core/board/NstBoardKasing"
    "core/board/NstBoardSuperGameBoogerman"
    "core/board/NstBoardBtlSmb3"
    "core/board/NstBoardUnlKingOfFighters97"
    "core/board/NstBoardBmc110in1"
    "core/board/NstBoardBandaiKaraokeStudio"
    "core/board/NstBoardRcm"
    "core/board/NstBoardMmc5"
    "core/board/NstBoardTxcPoliceman"
    "core/board/NstBoardKonamiVrc7"
    "core/board/NstBoardBandaiDatach"
    "core/board/NstBoardTaitoTc0190fmc"
    "core/board/NstBoardUnlWorldHero"
    "core/board/NstBoardBxRom"
    "core/board/NstBoardBmc22Games"
    "core/board/NstBoardKonamiVrc1"
    "core/board/NstBoardTxc"
    "core/board/NstBoardWaixingFfv"
    "core/board/NstBoardTaitoX1005"
    "core/board/NstBoardNtdec"
    "core/board/NstBoardBmcNovelDiamond"
    "core/board/NstBoardNamcot340"
    "core/board/NstBoardBtlPikachuY2k"
    "core/board/NstBoardJalecoJf13"
    "core/board/NstBoardZz"
    "core/board/NstBoardHenggedianzi"
    "core/board/NstBoardBmc21in1"
    "core/board/NstBoardFukutake"
    "core/board/NstBoardNamcot34xx"
    "core/board/NstBoardSomeriTeamSl12"
    "core/board/NstBoardCnePsb"
    "core/board/NstBoardGxRom"
    "core/board/NstBoardWaixing"
    "core/board/NstBoardSunsoftFme7"
    "core/board/NstBoardBmc9999999in1"
    "core/board/NstBoardIremHolyDiver"
    "core/board/NstBoard"
    "core/board/NstBoardBmcSuper700in1"
    "core/board/NstBoardKonamiVsSystem"
    "core/board/NstBoardUnlA9746"
    "core/board/NstBoardKaiser"
    "core/board/NstBoardBmc76in1"
    "core/board/NstBoardBtlMarioBaby"
    "core/board/NstBoardMmc2"
    "core/board/NstBoardSachenSa72008"
    "core/board/NstBoardSachenTcu"
    "core/board/NstBoardRumbleStation"
    "core/board/NstBoardFutureMedia"
    "core/board/NstBoardNamcot175"
    "core/board/NstBoardUnlMortalKombat2"
    "core/board/NstBoardOpenCorp"
    "core/board/NstBoardWaixingSecurity"
    "core/board/NstBoardVsSystem"
    "core/board/NstBoardSachenS8259"
    "core/board/NstBoardCneShlz"
    "core/board/NstBoardDreamtech"
    "core/board/NstBoardBmc31in1"
    "core/board/NstBoardTxcMxmdhtwo"
    "core/board/NstBoardSachenSa0037"
    "core/board/NstBoardAveD1012"
    "core/board/NstBoardWaixingSh2"
    "core/board/NstBoardAgci"
    "core/board/NstBoardKonamiVrc4"
    "core/board/NstBoardBmcSuperHiK4in1"
    "core/board/NstBoardTxRom"
    "core/board/NstBoardJalecoJf17"
    "core/board/NstBoardWaixingSgz"
    "core/board/NstBoardCaltron"
    "core/board/NstBoardBmc72in1"
    "core/board/NstBoardSunsoft2"
    "core/board/NstBoardMagicKidGoogoo"
    "core/board/NstBoardBandaiAerobicsStudio"
    "core/board/NstBoardNihon"
    "core/board/NstBoardBmcHero"
    "core/board/NstBoardEvent"
    "core/board/NstBoardRexSoftSl1632"
    "core/board/NstBoardBtlSuperBros11"
    "core/board/NstBoardBmcVrc4"
    "core/board/NstBoardSachenStreetHeroes"
    "core/board/NstBoardAxRom"
    "core/board/NstBoardNitra"
    "core/board/NstBoardSunsoft3"
    "core/board/NstBoardFb"
    "core/board/NstBoardUnlXzy"
    "core/board/NstBoardUnlSuperFighter3"
    "core/board/NstBoardIremKaiketsu"
    "core/board/NstBoardBmcY2k64in1"
    "core/board/NstBoardBmc1200in1"
    "core/board/NstBoardBandaiLz93d50"
    "core/board/NstBoardAction53"
    "core/board/NstBoardGouder"
    "core/board/NstBoardBtlTobidaseDaisakusen"
    "core/board/NstBoardBmcGolden190in1"
    "core/board/NstBoardBmc35in1"
    "core/board/NstBoardCamerica"
    "core/board/NstBoardAe"
    "core/board/NstBoardBmcGoldenCard6in1"
    "core/board/NstBoardBtl6035052"
    "core/board/NstBoardBmcFamily4646B"
    "core/board/NstBoardBmcCh001"
    "core/board/NstBoardBandaiLz93d50ex"
    "core/board/NstBoardMmc1"
    "core/board/NstBoardFfe"
    "core/board/NstBoardUnlN625092"
    "core/board/NstBoardBmc36in1"
    "core/board/NstBoardBtlSmb2b"
    "core/board/NstBoardRexSoftDb5z"
    "core/board/NstBoardInlNsf"
    "core/board/NstBoardMmc6"
    "core/board/NstBoardBtlShuiGuanPipe"
    "core/board/NstBoardJalecoSs88006"
    "core/board/NstBoardSuperGameLionKing"
    "core/board/NstBoardBtlGeniusMerioBros"
    "core/board/NstBoardBmc20in1"
    "core/board/NstBoardMmc4"
    "core/board/NstBoardJalecoJf11"
    "core/board/NstBoardBtlDragonNinja"
    "core/board/NstBoardIremG101"
    "core/board/NstBoardBmcCtc65"
    "core/board/NstBoardBmc8157"
    "core/board/NstBoardBmc800in1"
    "core/board/NstBoardQj"
    "core/board/NstBoardJalecoJf16"
    "core/board/NstBoardTengen"
    "core/board/NstBoardBmcSuper40in1"
    "core/board/NstBoardSunsoft4"
    "core/board/NstBoardSachenSa72007"
    "core/board/NstBoardUnlCc21"
    "core/board/NstBoardBtlAx5705"
    "core/board/NstBoardFujiya"
    "core/board/NstBoardBmcA65as"
    "core/board/NstBoardWaixingPs2"
    "core/board/NstBoardMagicSeries"
    "core/board/NstBoardWhirlwind"
    "core/board/NstBoardBmcPowerjoy84in1"
    "core/board/NstBoardCneDecathlon"
    "core/board/NstBoardBmc150in1"
    "core/board/NstBoardMmc3"
    "core/board/NstBoardBmcGoldenGame260in1"
    "core/board/NstBoardTaitoX1017"
    "core/board/NstBoardBmc64in1"
    "core/board/NstBoardBtl2708"
    "core/board/NstBoardUxRom"
    "core/board/NstBoardSachenSa0036"
    "core/board/NstBoardUnlKingOfFighters96"
    "core/board/NstBoardSachen74x374"
    "core/board/NstBoardBandai24c0x"
    "core/board/NstBoardTaitoTc0190fmcPal16r4"
    "core/board/NstBoardBtlSmb2a"
    "core/board/NstBoardBmcGamestarB"
    "core/board/NstBoardSunsoft1"
    "core/board/NstBoardHosenkan"
    "core/board/NstBoardAveNina"
    "core/board/NstBoardCony"
    "core/board/NstBoardBmcFk23c"
    "core/board/NstBoardBmcT262"
    "core/NstFile"
    "core/NstPatcher"
    "core/NstTrackerRewinder"
    "core/NstProperties"
    "core/NstXml"
    "core/NstTracker"
    "core/input/NstInpPowerPad"
    "core/input/NstInpPartyTap"
    "core/input/NstInpHoriTrack"
    "core/input/NstInpExcitingBoxing"
    "core/input/NstInpMouse"
    "core/input/NstInpFamilyKeyboard"
    "core/input/NstInpCrazyClimber"
    "core/input/NstInpBarcodeWorld"
    "core/input/NstInpPowerGlove"
    "core/input/NstInpMahjong"
    "core/input/NstInpBandaiHyperShot"
    "core/input/NstInpPaddle"
    "core/input/NstInpFamilyTrainer"
    "core/input/NstInpDoremikkoKeyboard"
    "core/input/NstInpAdapter"
    "core/input/NstInpPokkunMoguraa"
    "core/input/NstInpPad"
    "core/input/NstInpZapper"
    "core/input/NstInpTurboFile"
    "core/input/NstInpPachinko"
    "core/input/NstInpRob"
    "core/input/NstInpKonamiHyperShot"
    "core/input/NstInpTopRider"
    "core/input/NstInpOekaKidsTablet"
    "core/input/NstInpSuborKeyboard"
    "core/NstChecksum"
    "core/NstState"
    "core/NstVideoRenderer"
    "core/NstApu"
    "core/NstHomebrew"
    "core/NstRam"
    "core/NstVideoFilter2xSaI"
    "core/api/NstApiVideo"
    "core/api/NstApiMovie"
    "core/api/NstApiHomebrew"
    "core/api/NstApiNsf"
    "core/api/NstApiInput"
    "core/api/NstApiRewinder"
    "core/api/NstApiUser"
    "core/api/NstApiFds"
    "core/api/NstApiCheats"
    "core/api/NstApiTapeRecorder"
    "core/api/NstApiBarcodeReader"
    "core/api/NstApiMachine"
    "core/api/NstApiEmulator"
    "core/api/NstApiCartridge"
    "core/api/NstApiDipSwitches"
    "core/api/NstApiSound"
    "core/NstLog"
    "core/NstSha1"
    "core/NstCpu"
    "core/NstCore"
    "core/NstMachine"
    "core/NstAssert"
    "core/NstVideoFilterHqX"
    "core/NstPatcherIps"
    "core/NstSoundPcm"
    "core/NstZlib"
    "core/NstNsf"
    "core/NstVideoFilterxBR"
    "core/NstFds"
    "core/NstCheats"
)
set_target_properties(3rdnestopia
    PROPERTIES COMPILE_FLAGS "-Wno-narrowing"
)
target_link_libraries(3rdnestopia
    ZLIB::ZLIB
)
